--- a/Assets/font-style.css
+++ b/Assets/font-style.css
@@ -6,7 +6,7 @@
     /* font-family: 'Roboto', sans-serif; */
 }
 .main-text{
-    color: #15275b; 
+    color: white; 
     font-size: 50px;
     font-family: 'Bebas Neue', cursive;
 }
