--- a/Assets/style.css
+++ b/Assets/style.css
@@ -42,12 +42,20 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 } .ajuste-top-produtos{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 100%;
+    padding: 0 auto;
+} .ajuste-top-produtos > ul{
+    padding-left: 0px;
+} #produtos{
+    margin-bottom: 0px;
 } .menu-produtos > a{
     list-style: none;
     color: white;
@@ -55,4 +63,7 @@ nav {
 } .ajuste-card-produto{
     display: flex;
     align-items: center;
+    margin-top: 3%;
 }
+
+/* SOBRE */
