--- a/Assets/font-style.css
+++ b/Assets/font-style.css
@@ -10,3 +10,7 @@
     font-size: 50px;
     font-family: 'Bebas Neue', cursive;
 }
+.secundary-text{
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
