--- a/Assets/font-style.css
+++ b/Assets/font-style.css
@@ -14,3 +14,10 @@
     color: white;
     font-family: 'Roboto', sans-serif;
 }
+.especial-color{
+    color: #d10924;
+} span {
+    color: white;
+} p {
+    color: white;
+}
