--- a/Assets/style.css
+++ b/Assets/style.css
@@ -78,3 +78,41 @@ nav {
 } .ajuste-texto-sobre{
     max-width: 50%;
 }
+
+/* CONTATO */
+.contato{
+    background-image: url(../Imagens/Background-Contato.png);
+    max-width: 1366px;
+    min-height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0;
+}
+.ajuste-main-text-contato{
+    width: 100%;
+    height: 10%;
+    text-align: center;
+} .ajuste-main-text-contato > h1{
+    margin-bottom: 0;
+    color: #15275b;
+}
+.lado-esquerdo{
+    display: flex;
+    max-width: 543px;
+    margin: 20px;
+} .lado-esquerdo > h3{
+    margin-bottom: 0;
+    color: #15275b;
+}
+.lado-direito{
+    display: flex;
+    max-width: 543px;
+    margin: 20px;
+}
+.rodape{
+    display: inline-block;
+    width: 100%;
+    background-color: #000;
+    text-align: center;
+}
