--- a/Assets/style.css
+++ b/Assets/style.css
@@ -75,8 +75,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 20px;
 } .ajuste-texto-sobre{
-    max-width: 50%;
+    max-width: 400px;
+    padding: 0 20px;
 }
 @media (max-width: 850px) {
     .ajuste-texto-sobre > h3{
