--- a/Assets/style.css
+++ b/Assets/style.css
@@ -77,7 +77,7 @@ nav {
     align-items: center;
     padding: 0 20px;
 } .ajuste-texto-sobre{
-    max-width: 400px;
+    max-width: 600px;
     padding: 0 20px;
 }
 @media (max-width: 850px) {
@@ -102,7 +102,7 @@ nav {
     text-align: center;
 } .ajuste-main-text-contato > h1{
     margin-bottom: 0;
-    color: #15275b;
+    color: #ffffff;
 }
 .lado-esquerdo{
     display: flex;
@@ -110,7 +110,7 @@ nav {
     margin: 20px;
 } .lado-esquerdo > h3{
     margin-bottom: 0;
-    color: #15275b;
+    color: #ffffff;
 }
 .lado-direito{
     display: flex;
@@ -118,7 +118,7 @@ nav {
     margin: 20px;
     padding: 10px;
     border-radius: 20px;
-    background-color: #15275b;
+    background-color: #000;
 }
 .rodape{
     display: inline-block;
